samples/_failures_safe/1761070833_dccfd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bad4c5e.c: In function ‘bfs’:
./samples/SAFE/__tmp_6bad4c5e.c:208:5: error: expected expression at end of input
  208 |     if (start_node ==
      |     ^~
./samples/SAFE/__tmp_6bad4c5e.c:208:5: error: expected declaration or statement at end of input
